--- a/src/css/common.css
+++ b/src/css/common.css
@@ -37,25 +37,26 @@ table {
 img, fieldset { border: none; }
 .left { float: left; }
 .right { float: right; }
-hr{
-clear:both;
-}
-.clear:after{
-    content:".";
-    display:block;
-    height:0;
+    hr{
     clear:both;
-    visibility:hidden;
-}
-* html .clear{height:1%}/*ie5+ie6*/
-*:first-chile+html .clear{min-height:1px;}/*ie7*/
-
-body {
+    }
+    .clear:after{
+        content:".";
+        display:block;
+        height:0;
+        clear:both;
+        visibility:hidden;
+    }
+    * html .clear{height:1%}/*ie5+ie6*/
+    *:first-chile+html .clear{min-height:1px;}/*ie7*/
+    html,body{
+        height: 100%;
+    }
+    body {
         width: 100%;
         font-family: 黑体;
         font-size: 14px;
         color:#fff;
-        
     }
     a{
         text-decoration: none;
