--- a/src/css/common.css
+++ b/src/css/common.css
@@ -31,33 +31,34 @@ q:before, q:after {
     content: none;
 }
 table {
+    overflow: hidden;
     border-collapse: collapse;
     border-spacing: 0;
 }
 img, fieldset { border: none; }
 .left { float: left; }
 .right { float: right; }
-    hr{
-    clear:both;
-    }
-    .clear:after{
-        content:".";
-        display:block;
-        height:0;
-        clear:both;
-        visibility:hidden;
-    }
-    * html .clear{height:1%}/*ie5+ie6*/
-    *:first-chile+html .clear{min-height:1px;}/*ie7*/
-    html,body{
-        height: 100%;
-        width: 100%;
-    }
-    body {
-        width: 100%;
+hr{
+clear:both;
+}
+.clear:after{
+    content:".";
+    display:block;
+    height:0;
+    visibility:hidden;
+}
+html{
+    height: 100%;
+    width: 100%;
+}
+body {
+        /* width: 100%; */
+        height: 100%; 
         font-family: 黑体;
         font-size: 14px;
         color:#fff;
+        background: red;
+        
     }
     a{
         text-decoration: none;
