--- a/src/css/common.css
+++ b/src/css/common.css
@@ -24,47 +24,52 @@ footer, header, hgroup, menu, nav, section {
 ol, ul {
     list-style: none;
 }
-
 blockquote:before, blockquote:after,
 q:before, q:after {
     content: '';
     content: none;
 }
 table {
-    overflow: hidden;
     border-collapse: collapse;
     border-spacing: 0;
 }
-img, fieldset { border: none; }
-.left { float: left; }
-.right { float: right; }
+img, fieldset { border: none;
+}
+.left { float: left;
+}
+.right { float: right;
+}
 hr{
-clear:both;
+    clear:both;
 }
 .clear:after{
-    content:".";
-    display:block;
-    height:0;
-    visibility:hidden;
+        content:".";
+        display:block;
+        height:0;
+        clear:both;
+        visibility:hidden;
 }
-html{
-    height: 100%;
-    width: 100%;
+* html .clear{height:1%
+}
+/*ie5+ie6*/
+*:first-chile+html .clear{min-height:1px;
+}
+/*ie7*/
+html,body{
+        height: 100%;
+        width: 100%;
 }
 body {
-        /* width: 100%; */
-        height: 100%; 
+        width: 100%;
         font-family: 黑体;
         font-size: 14px;
         color:#fff;
-        background: red;
-        
-    }
-    a{
+}
+a{
         text-decoration: none;
         color: #fff;
         font-family: 黑体
-    }
-    img{
+}
+img{
         margin: 0;
-    }
+}
